--- a/form/fruit-start.css
+++ b/form/fruit-start.css
@@ -4,6 +4,25 @@ input:invalid {
 input:valid {
   border: 2px solid black;
 }
+input[type=search]{
+  border: 1px dotted #999;
+  border-radius: 15px;
+  -webkit-appearance:none;
+}
+input,textarea,button{
+  width: 150px;
+  margin: 10px;
+  display: block;
+  -webkit-box-sizing: border-box; /* For legacy WebKit based browsers */
+   -moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
+        box-sizing: border-box;
+}
+
+legend {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
 .select{
   position: relative;
   display: inline-block;
