--- a/stylingHTMLexample/stylingExample.css
+++ b/stylingHTMLexample/stylingExample.css
@@ -37,14 +37,14 @@ h1{
 	font: 1em "typewriter",sans-serif;
 }
 
-#form{
+#from{
 	position: absolute;
 	left: 398px;
 	top: 235px;
 }
 #reply{
 	position: absolute;
-	left: 20px;
+	left: 390px;
 	top: 285px;
 }
 #message{
@@ -69,7 +69,7 @@ input, textarea {
 }
 
 input:focus,textarea:focus{
-	background: rgba(0,0,0,1);
+	background: rgba(0,0,0,.1);
 	border-radius: 5px;
 	outline: none;
 }
