--- a/form/fruit-start.css
+++ b/form/fruit-start.css
@@ -125,6 +125,48 @@ body {
     display:inline-block;
     padding:0;
     margin:0;
+}
+.advanced-field {
     border:1px solid #ccc;
+    border-radius:5px;
+    margin:0;
+    padding:1em;
+}
+.advanced-label{
+    cursor:pointer;
+}
+.advanced-p{
+    margin:0;
+}
+.advanced-p+.advanced-p{
+    margin:.5em 0 0;
+}
+:root input[type=checkbox]{
+    position:absolute;
+    left:-1000em;
+}
+:root input[type=checkbox]+label:before{
+    content:"";
+    display:inline-block;
+    width:16px;
+    height:16px;
+    margin:0 .5em 0 0;
+    background:url("https://developer.mozilla.org/files/4173/checkbox-sprite.png") no-repeat 0 0;
+    vertical-align:bottom;
+    position:relative;
+    bottom:2px;
+}
+:root input[type=checkbox]:checked + label:before {
+  background-position: 0 -16px;
+}
 
+:root input[type=checkbox]:disabled + label:before {
+  background-position: 0 -32px;
+}
+
+:root input[type=checkbox]:checked:disabled + label:before {
+  background-position: 0 -48px;
+}
+:root input[type=checkbox]:focus + label:before {
+  outline: 1px dotted black;
 }
