--- a/form/fruit-start.css
+++ b/form/fruit-start.css
@@ -80,6 +80,9 @@ legend {
 }
 .select .option {
   padding: .2em .3em; /* 2px 3px */
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  background:none;
 }
 
 .select .highlight {
@@ -141,6 +144,7 @@ body {
 .advanced-p+.advanced-p{
     margin:.5em 0 0;
 }
+
 :root input[type=checkbox]{
     position:absolute;
     left:-1000em;
@@ -159,11 +163,9 @@ body {
 :root input[type=checkbox]:checked + label:before {
   background-position: 0 -16px;
 }
-
 :root input[type=checkbox]:disabled + label:before {
   background-position: 0 -32px;
 }
-
 :root input[type=checkbox]:checked:disabled + label:before {
   background-position: 0 -48px;
 }
