--- a/tableCSS/block.css
+++ b/tableCSS/block.css
@@ -41,17 +41,17 @@ h1 {
 /* Your CSS below here */
 article{
   background-color:white;
-  /*background-image:url(top-image.png);  
-  background-repeat: no-repeat;*/
   background-image: url(top-image.png),url(bottom-image.png),
                     linear-gradient(to top right, rgba(0,0,0,0), rgba(0,0,0,0.1)), 
                     linear-gradient(to bottom right, rgba(0,0,0,0), rgba(0,0,0,0.1));
                     background-repeat: no-repeat,no-repeat;
   background-position: top,bottom;
+  /*
   border-top: 3px solid red;
   border-bottom: 3px solid red;
   border-left: 1px black solid;
-  border-right: 1px black solid;
+  border-right: 1px black solid;*/
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.7);
 
 }
 h1{
