--- a/form/payment-form.css
+++ b/form/payment-form.css
@@ -14,6 +14,7 @@ form {
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 1em;
+    box-shadow: 0px 0px 15px rgba(0,0,0,1)
 }
 
 div+div {
